# Real-Time-Strategy

./: .gitignore  CMakeLists.txt  Documentation.md  Notatki.hs  README.md  Tests_docs.md  build&run.bat  build&run.sh  build.bat  build.sh  buildDebug.bat  buildDebug.sh  buildRelease.bat  buildRelease.sh  build_tests.bat  debugTest.bat  runTests.bat  run_tests.bat
dependencies/: CMakeLists.txt
docs/: Documentation.md
models/: low_poly_warrior.glb  preview.mtl  scene.gltf  studnia.glb  studnia.mtl
shaders/: shader.frag  shader.vert  shader2.frag  shader2d.frag  shader2d.vert
source/: CMakeLists.txt  VulkanTools.h  cameraControl.c  definitions.h  drawFrame.c  main.c
source/army/: army.c  army.h
source/army/cohord/: cohord.c  cohord.h  cohortModels.c  displacement.c  fight.c  fightBuilder.c  movement.c
source/button/: button.c  button.h
source/camera/: camera.c
source/cohord/: cohord.h  displacement.c  movement.c
source/deltaTime/: deltaTime.h
source/functions/: commandBuffer.c  commandPool.c  framebuffers.c  graphicsPipeline.c  imageViews.c  instance.c  logicalDevice.c  physicalDevice.c  pipelineLayout.c  renderPass.c  surface.c  swapChain.c  syncObjects.c  window.c
source/functions/model/: createModel.c  model.h
source/functions/model/modelFunctions/: descriptorPool.c  descriptorSet.c  descriptorSetLayout.c  graphicsPipeline.c  modelFunctions.h  pipelineLayout.c  storageBuffer.c  vertexBuffer.c
source/functions/model/modelLoader/: gltfLoader.c  modelLoader.h  objLoaderl.c
source/graphics/: VulkanTools.h  drawFrame.c
source/graphics/buffers/: instanceBuffer.h
source/graphics/descriptors/: objectSet.c
source/graphics/model/: createModel.c  model.h
source/graphics/model/builder/: modelBuilder.h
source/graphics/model/builder/loader/: gltfLoader.c  modelLoader.h  objLoaderl.c
source/graphics/model/builder/type/: interface.c  object.c
source/graphics/model/functions/: descriptorSet.c  modelFunctions.h  pipelineLayout.c
source/graphics/setup/: setup.c  setup.h
source/graphics/setup/GraphicsSetup/: graphicsSetup.c  graphicsSetup.h
source/graphics/setup/GraphicsSetup/functions/: physicalDevice.c
source/graphics/setup/GraphicsSetup/swapChain/: swapChain.h
source/graphics/setup/functions/: instance.c  logicalDevice.c  window.c
source/queueFamilyIndices/: queueFamilyIndices.c  queueFamilyIndices.h
source/setup/: setup.c  setup.h
source/state/: game.c  lose.c  menu.c  pause.c  state.h  win.c
source/swapChainSupportDetails/: swapChainSupportDetails.c  swapChainSupportDetails.h
source/windowControl/: windowControl.h
tests/: CMakeLists.txt  test_button.c  test_cohord.c  test_cohordModels.c  test_deltaTime.c  test_displacement.c  test_fight.c  test_fightBuilder.c  test_fileLoader.c  test_game.c  test_main.c  test_movement.c
